# gliderport

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  test.yaml
gliderport/: __init__.py  __main__.py  config.py  file.py  files.py  log.py  preset_cli.py  sky.py  utils.py  vm.py
gliderport/preset/: __init__.py  base_ds.py  call_dms.py  call_loop.py  cool_ds.py  mapping.py  merge_allc.py  notebook.py  snakemake.py  utilities.py
gliderport/preset/template/: __init__.py  call_dms.config_template.jinja2  call_dms.sky_template.jinja2  call_loop.config_template.jinja2  call_loop.sky_template.jinja2  generate_baseds.config_template.jinja2  generate_baseds.sky_template.jinja2  generate_coolds.config_template.jinja2  generate_coolds.sky_template.jinja2  mapping.config_template.jinja2  mapping.sky_template.jinja2  merge_allc.config_template.jinja2  merge_allc.sky_template.jinja2  snakemake.config_template.jinja2  warm_up.sky.jinja2
tests/: test_basic.py
