[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "gliderport"
version = "0.3.3"
description = "Launch jobs on sky"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Hanqing Liu"},
]
maintainers = [
    {name = "Hanqing Liu", email = "hanliu@salk.edu"},
]
urls.Documentation = "https://gliderport.readthedocs.io/"
urls.Source = "https://github.com/lhqing/gliderport"
urls.Home-page = "https://github.com/lhqing/gliderport"
dependencies = [
    "pandas",
    "Jinja2",
    "click",
    "gcsfs",
    "nbformat",
    "skypilot-nightly",
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit"
]
doc = [
    "sphinx>=4",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["gliderport"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[project.scripts]
glider = "gliderport.__main__:_glider"
glider-preset = "gliderport.preset_cli:_glider_preset"
